# CS564-Project-3

./: CMakeLists.txt
docs/: annotated.html  bad__buffer__exception_8cpp_source.html  bad__buffer__exception_8h_source.html  badgerdb__exception_8cpp_source.html  badgerdb__exception_8h_source.html  buf_hash_tbl_8cpp_source.html  buf_hash_tbl_8h_source.html  buffer_8cpp_source.html  buffer_8h_source.html  buffer__exceeded__exception_8cpp_source.html  buffer__exceeded__exception_8h_source.html  classbadgerdb_1_1_bad_buffer_exception-members.html  classbadgerdb_1_1_bad_buffer_exception.html  classbadgerdb_1_1_badger_db_exception-members.html  classbadgerdb_1_1_badger_db_exception.html  classbadgerdb_1_1_buf_desc-members.html  classbadgerdb_1_1_buf_desc.html  classbadgerdb_1_1_buf_hash_tbl-members.html  classbadgerdb_1_1_buf_hash_tbl.html  classbadgerdb_1_1_buf_mgr-members.html  classbadgerdb_1_1_buf_mgr.html  classbadgerdb_1_1_buffer_exceeded_exception-members.html  classbadgerdb_1_1_buffer_exceeded_exception.html  classbadgerdb_1_1_file-members.html  classbadgerdb_1_1_file.html  classbadgerdb_1_1_file_exists_exception-members.html  classbadgerdb_1_1_file_exists_exception.html  classbadgerdb_1_1_file_iterator-members.html  classbadgerdb_1_1_file_iterator.html  classbadgerdb_1_1_file_not_found_exception-members.html  classbadgerdb_1_1_file_not_found_exception.html  classbadgerdb_1_1_file_open_exception-members.html  classbadgerdb_1_1_file_open_exception.html  classbadgerdb_1_1_hash_already_present_exception-members.html  classbadgerdb_1_1_hash_already_present_exception.html  classbadgerdb_1_1_hash_not_found_exception-members.html  classbadgerdb_1_1_hash_not_found_exception.html  classbadgerdb_1_1_hash_table_exception-members.html  classbadgerdb_1_1_hash_table_exception.html  classbadgerdb_1_1_insufficient_space_exception-members.html  (+76 more)
src/: #buffer.cpp#  badgerdb_main  buffer.cpp  buffer.h  main.cpp  main.cpp~
